--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
 title: JOONWOO
-description: Hanuman is a minimal yet powerful Jekyll theme for your blogs and websites.
+description: ??? ???
 cover: assets/images/radhakrishna.jpg
 logo: assets/images/logo.png
 favicon: assets/images/favicon.png
 baseurl:  # the subpath of your site, e.g. /blog/ or / for root
-url: "https://kim3163.github.io/kimjoon.github" # the base hostname & protocol for your site
+url: "https://kim3163.github.io/kimjoon.github/" # the base hostname & protocol for your site
 paginate:	5 # The number of posts to show per page on your homepage
 
 # Social
