Selenium SMSSend.py 추가

--- a/selenium_sms/SMS-master/SMS.conf
+++ b/selenium_sms/SMS-master/SMS.conf
@@ -29,17 +29,17 @@ SMTP_IP		= shield.mobigen.com
 SMTP_PORT	= 25
 
 [IRIS]
-IRIS_IP			= 192.168.100.180
-IRIS_PORT		= 22
-IRIS_CON_IP 	= 192.168.100.180:5050
-IRIS_CON_ID 	= psi
-IRIS_CON_PWD 	= psi.123!@#
-IRIS_DATABASE 	= psi
-SSH_PORT 	= 22
-USER 		= pse
-PASSWD 		= psi.123!@#
-PASSWD2 	= psi.123!@#
-CMDPATH 	= /DATA/IRIS/bin/Admin/NodeList
+IRIS_IP			= {ip}
+IRIS_PORT		= {port}
+IRIS_CON_IP 	= {ip:port}
+IRIS_CON_ID 	= {connect_id}
+IRIS_CON_PWD 	= {connect_pass}
+IRIS_DATABASE 	= {connect_db}
+SSH_PORT 	= {ssh_port}
+USER 		= {user_id}
+PASSWD 		= {passwd}
+PASSWD2 	= {passwd2}
+CMDPATH 	= {NodeList cmd path}
 IRIS_LOAD_AVG 	= 30
 IRIS_MEM_P 		= 40
 IRIS_MEM_F 		= 70
@@ -48,18 +48,17 @@ OPENLAB_STATUS	= 200
 WEB-LOGIN		= OK
 
 [WEB]
-IRIS_OPENLAB_DOMAIN	= openlab.bigdata-transportation.kr
-IRIS_OPENLAB_URL	= https://openlab.bigdata-transportation.kr:10443/health_check
-SUCCESS_URL		= https://www.bigdata-transportation.kr/frn/index
+IRIS_OPENLAB_DOMAIN	= {openlab_domain}
+IRIS_OPENLAB_URL	= {healthcheck url}
+SUCCESS_URL		= {success url}
 
 
 [RESOURCES]
-#SERVER_LIST = 172.27.0.209,172.27.0.196,172.27.0.100,172.27.0.80,10.65.255.89,10.65.255.58,10.65.255.113,10.65.255.90,10.65.255.100,10.65.255.34,10.65.255.55,10.64.255.113,10.64.255.126,10.64.255.127
-SERVER_LIST = 192.168.100.55
+SERVER_LIST = {server_ip}
 SSH_PORT = 22
-USER = tacs
-PASSWD = !hello.iris0
-PASSWD2 = !hello.iris0
+USER = {server_id}
+PASSWD = {server_passwd}
+PASSWD2 = {server_passwd2}
 LOAD_AVG = 20
 MEMORY = 80
 DISK = 90 
@@ -68,87 +67,8 @@ LOG_SECOND = 50000000
 FILE_SECOND = 3600
 
 ############### Server Detail Info ##################
-[172.27.0.209]
+[{server_ip}]
 SSH_PORT        = 22
-USER            = eva
-PASSWD          = !hello.eva0
-PASSWD2         = !hello.eva0
-
-[172.27.0.196]
-SSH_PORT        = 22
-USER            = eva
-PASSWD          = !hello.eva0
-PASSWD2         = !hello.eva0
-
-[172.27.0.100]
-SSH_PORT        = 22
-USER            = eva
-PASSWD          = !hello.eva0
-PASSWD2         = !hello.eva0
-
-[172.27.0.80]
-SSH_PORT        = 22
-USER            = eva
-PASSWD          = !hello.eva0
-PASSWD2         = !hello.eva0
-
-[10.65.255.89]
-SSH_PORT        = 22
-USER            = eva
-PASSWD          = !hello.eva0
-PASSWD2         = !hello.eva0
-
-[10.65.255.58]
-SSH_PORT        = 22
-USER            = eva
-PASSWD          = !hello.eva0
-PASSWD2         = !hello.eva0
-
-[10.65.255.113]
-SSH_PORT        = 22
-USER            = eva
-PASSWD          = !hello.eva0
-PASSWD2         = !hello.eva0
-
-[10.65.255.90]
-SSH_PORT        = 22
-USER            = eva
-PASSWD          = !hello.eva0
-PASSWD2         = !hello.eva0
-
-[10.65.255.100]
-SSH_PORT        = 22
-USER            = eva
-PASSWD          = !hello.eva0
-PASSWD2         = !hello.eva0
-
-[10.65.255.34]
-SSH_PORT        = 22
-USER            = eva
-PASSWD          = !hello.eva0
-PASSWD2         = !hello.eva0
-
-[10.65.255.55]
-SSH_PORT        = 22
-USER            = eva
-PASSWD          = !hello.eva0
-PASSWD2         = !hello.eva0
-
-[10.64.255.113]
-SSH_PORT        = 22
-USER            = iris
-PASSWD          = !hello.iris0
-PASSWD2         = !hello.iris0
-
-[10.64.255.126]
-SSH_PORT        = 22
-USER            = iris
-PASSWD          = !hello.iris0
-PASSWD2         = !hello.iris0
-
-[10.64.255.127]
-SSH_PORT        = 22
-USER            = iris
-PASSWD          = !hello.iris0
-PASSWD2         = !hello.iris0
-
+USER            = {server_id}
+PASSWD          = {server_passwd}
+PASSWD2         = {server_passwd2}
